Update serverstart.sh